WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29295
Free ThreadGlobalData in Qt (heavily leaks when JS workers are used)
https://bugs.webkit.org/show_bug.cgi?id=29295
Summary
Free ThreadGlobalData in Qt (heavily leaks when JS workers are used)
Zoltan Herczeg
Reported
2009-09-16 04:21:08 PDT
This patch proposes a fix for the Qt port of wtf/ThreadSpecific.h to free thread local objects when a thread is destroyed.
Attachments
proposed patch
(3.18 KB, patch)
2009-09-16 04:28 PDT
,
Zoltan Herczeg
no flags
Details
Formatted Diff
Diff
More changelog text
(3.86 KB, patch)
2009-09-16 05:48 PDT
,
Zoltan Herczeg
hausmann
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Zoltan Herczeg
Comment 1
2009-09-16 04:28:12 PDT
Created
attachment 39639
[details]
proposed patch
Zoltan Herczeg
Comment 2
2009-09-16 05:48:03 PDT
Created
attachment 39642
[details]
More changelog text
Simon Hausmann
Comment 3
2009-09-16 06:03:11 PDT
Comment on
attachment 39642
[details]
More changelog text r=me, thanks for the more detailed explanation in the ChangeLog
Zoltan Horvath
Comment 4
2009-09-16 06:21:26 PDT
Landed in @48412.
http://trac.webkit.org/changeset/48412/
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug